--- a/index.html
+++ b/index.html
@@ -543,6 +543,72 @@ form button:hover {
 }
 
 
+.highlight-section {
+  background: linear-gradient(to right, #000, #111);
+  color: white;
+  padding: 4rem 2rem;
+}
+
+.highlight-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 2rem;
+}
+
+.highlight-image {
+  flex: 1 1 400px;
+  text-align: center;
+}
+
+.highlight-image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+}
+
+.highlight-text {
+  flex: 1 1 400px;
+}
+
+.highlight-text h2 {
+  font-size: 2.5rem;
+  color: #C8A951;
+  margin-bottom: 1rem;
+}
+
+.highlight-text p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  margin-bottom: 2rem;
+  color: #ddd;
+}
+
+.btn-metaverso {
+  display: inline-block;
+  padding: 0.8rem 2rem;
+  background-color: #C8A951;
+  color: #000;
+  text-decoration: none;
+  font-weight: 600;
+  border-radius: 25px;
+  transition: background 0.3s ease;
+}
+
+.btn-metaverso:hover {
+  background-color: #a18736;
+}
+
+/* Responsivo */
+@media (max-width: 768px) {
+  .highlight-container {
+    flex-direction: column;
+    text-align: center;
+  }
+}
 
   </style>
 </head>
@@ -607,12 +673,12 @@ form button:hover {
       <input type="number" name="quantidade" placeholder="Quantos ônibus?" required min="1" />
       <input type="date" name="data" placeholder="Data de retirada" required />
       <textarea name="mensagem" placeholder="Mensagem adicional" rows="4"></textarea>
-      <button type="submit">Enviar via WhatsApp</button>
+      <button type="submit">Enviar</button>
     </form>
   </div>
 </section>
 
-<a href="https://wa.me/5599999999999" class="whatsapp-float" target="_blank" aria-label="Fale conosco no WhatsApp">
+<a href="https://wa.me/5561996067198" class="whatsapp-float" target="_blank" aria-label="Fale conosco no WhatsApp">
   <img src="imagens/logos/wpp.svg" alt="WhatsApp" />
 </a>
 
@@ -642,102 +708,39 @@ form button:hover {
 
 
 
-
-<section class="fleet-section">
-  <div class="fleet-content reverse">
-    <div class="fleet-text">
-      <h2>Volvo 7900 Elétrico</h2>
-      <p>
-        Modelo 100% elétrico para operações urbanas e intermunicipais. Zero emissão de poluentes, baixo nível de ruído e tecnologia de ponta para uma experiência silenciosa e sustentável. Conforto premium e acessibilidade total.
-      </p>
+<section class="highlight-section">
+  <div class="highlight-container">
+    <div class="highlight-image">
+      <img src="imagens/carros/02.png" alt="Volvo 7900 Elétrico">
     </div>
-    <div class="fleet-image">
-      <img src="imagens/carros/02.png" alt="Ônibus Volvo 7900 Elétrico">
+    <div class="highlight-text">
+      <h2>Volvo 7900</h2>
+      <p>
+        O Volvo 7900 Elétrico é o futuro da mobilidade urbana. Com emissão zero, baixo ruído e desempenho premium, proporciona conforto, acessibilidade e sustentabilidade. Uma experiência inovadora para o transporte coletivo.
+      </p>
+      <a href="metaverso.html" class="btn-metaverso">Metaverso</a>
     </div>
   </div>
 </section>
 
 
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Volvo 7900 3D Modelo</title>
-<style>
-  body {
-    margin: 0;  /* Remove margem da página */
-    font-family: Arial, sans-serif;
-  }
-  .header-tarja {
-    background-color: #000; /* preto */
-    color: #C8A951; /* branco */
-    text-align: center;
-    padding: 15px 0;
-    font-size: 24px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    margin: 0; /* Remove margem da tarja */
-  }
-  .sketchfab-embed-wrapper {
-    max-width: 1200px;
-    margin: 0 auto; /* centraliza sem margem superior */
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 0;
-    overflow: hidden;
-  }
-  .sketchfab-embed-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-  }
-</style>
-</head>
-<body>
-
-<div class="header-tarja">
-  Conheça o Volvo 7900
-</div>
-
-<div class="sketchfab-embed-wrapper">
-  <iframe 
-    src="https://sketchfab.com/models/5a343a0b4351456a9ce5783793bf55ad/embed" 
-    frameborder="0" 
-    allowfullscreen 
-    mozallowfullscreen="true" 
-    webkitallowfullscreen="true" 
-    allow="autoplay; fullscreen; xr-spatial-tracking" 
-    xr-spatial-tracking 
-    execution-while-out-of-viewport 
-    execution-while-not-rendered 
-    web-share>
-  </iframe>
-</div>
-
-</body>
-</html>
-
 
 <section class="testimonials-section">
   <div class="container">
-    <h2>Empresas que confiam na BlackDiamond Bus</h2>
+    <h2>Empresas que confiam na Black Diamond Bus</h2>
     <div class="testimonials-grid">
       <div class="testimonial">
-        <p>"A BlackDiamond Bus superou nossas expectativas. Atendimento impecável e frota moderna. Recomendamos 100%."</p>
+        <p>"A Black Diamond Bus superou nossas expectativas. Atendimento impecável e frota moderna. Recomendamos 100%."</p>
         <h4>Transportes Andrade</h4>
       </div>
 
       <div class="testimonial">
-        <p>"Conseguimos realizar um grande evento corporativo com tranquilidade graças à pontualidade e conforto dos ônibus da BlackDiamond."</p>
+        <p>"Conseguimos realizar um grande evento corporativo com tranquilidade graças à pontualidade e conforto dos ônibus da Black Diamond."</p>
         <h4>Grupo Verde Vale</h4>
       </div>
 
       <div class="testimonial">
-        <p>"Eles são referência em qualidade e segurança. Sempre escolhemos a BlackDiamond para nossas viagens executivas."</p>
+        <p>"Eles são referência em qualidade e segurança. Sempre escolhemos a Black Diamond para nossas viagens executivas."</p>
         <h4>Logística Elite</h4>
       </div>
     </div>
@@ -792,7 +795,7 @@ form button:hover {
 
 
   <footer>
-    <p>&copy; 2025 BlackDiamond Bus. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Black Diamond Bus. Todos os direitos reservados.</p>
   </footer>
 
   <script>
@@ -817,7 +820,7 @@ form button:hover {
                   `📅 Data de retirada: ${data}%0A` +
                   `✉️ Mensagem: ${mensagem || 'N/A'}`;
 
-    const numeroWhatsApp = '5599999999999'; // Substitua com seu número (ex: 55 + DDD + número)
+    const numeroWhatsApp = '5561996067198'; // Substitua com seu número (ex: 55 + DDD + número)
 
     window.open(`https://wa.me/${numeroWhatsApp}?text=${texto}`, '_blank');
   });
