--- a/index.html
+++ b/index.html
@@ -671,21 +671,21 @@ form button:hover {
     <div class="icon-placeholder">
       <img src="imagens/logos/01.svg" alt="Missão" />
     </div>
-    <h3>Tecnologia e Sustentabilidade</h3>
+    <h3>Tecnologia</h3>
   </div>
 
   <div class="feature-item">
     <div class="icon-placeholder">
       <img src="imagens/logos/02.svg" alt="Segurança" />
     </div>
-    <h3>Conforto e Segurança </h3>
+    <h3>Segurança </h3>
   </div>
 
   <div class="feature-item">
     <div class="icon-placeholder">
       <img src="imagens/logos/03.svg" alt="Conforto" />
     </div>
-    <h3>Economia e Eficiência Operacional</h3>
+    <h3>Economia</h3>
   </div>
 </section>
 
