--- a/index.html
+++ b/index.html
@@ -863,29 +863,50 @@ form button:hover {
   }
 }
 
-.cotacao-bar {
-      background-color: #1a1a1a;
-      color: #fff;
-      padding: 10px 20px;
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      display: flex;
+.cotacao-wrapper {
+    background: #1a1a1a;
+    padding: 10px 20px;
+    overflow-x: hidden;
+    display: flex;
+    gap: 30px;
+    width: 100vw;
+  }
+  .cotacao-bar, .cotacao-clone {
+    display: flex;
+    gap: 30px;
+    flex-shrink: 0;
+    white-space: nowrap;
+  }
+  .moeda {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    white-space: nowrap;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: white;
+    min-width: 100px;
+  }
+  .valor {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+  }
+  .subiu {
+    color: #4CAF50;
+  }
+  .desceu {
+    color: #E53935;
+  }
+  @media (min-width: 768px) {
+    .cotacao-wrapper {
       justify-content: center;
-      align-items: center;
-      gap: 40px;
-      position: relative;
-      z-index: 999;
+      overflow-x: visible;
     }
-
-    .moeda {
-      display: flex;
-      gap: 8px;
-      align-items: center;
+    .cotacao-clone {
+      display: none;
     }
-
-    .moeda span {
-      font-weight: bold;
-    }
+  }
   </style>
 </head>
 <body>
@@ -893,7 +914,7 @@ form button:hover {
     <div class="logo">
       <img src="imagens/logos/logs.svg" alt="Logo BlackDiamond Bus" />
     </div>
-    
+
     <nav class="nav">
       <ul>
         <li><a href="sobre-nos.html">Sobre Nós</a></li>
@@ -902,10 +923,31 @@ form button:hover {
     </nav>
     <div class="menu-toggle" id="menu-toggle">&#9776;</div>
   </header>
-  <section class="cotacao-bar">
-    <div class="moeda">💵 Dólar: <span id="usd">Carregando...</span></div>
-    <div class="moeda">💶 Euro: <span id="eur">Carregando...</span></div>
+
+  <section class="cotacao-wrapper" id="cotacaoWrapper">
+  <section class="cotacao-bar" id="cotacaoBar">
+    <div class="moeda">
+      <div>USD</div>
+      <div id="usd" class="valor">...</div>
+    </div>
+    <div class="moeda">
+      <div>EUR</div>
+      <div id="eur" class="valor">...</div>
+    </div>
+    <div class="moeda">
+      <div>AU</div>
+      <div id="gold" class="valor">...</div>
+    </div>
+    <div class="moeda">
+      <div>BTC</div>
+      <div id="btc" class="valor">...</div>
+    </div>
   </section>
+
+  <section class="cotacao-clone" id="cotacaoClone" aria-hidden="true">
+    <!-- será preenchido via JS -->
+  </section>
+</section>
 
   <section class="hero-video-container">
     <video autoplay muted loop playsinline>
@@ -1171,26 +1213,142 @@ form button:hover {
   window.addEventListener('load', revealOnScroll01);
 
 
+let ultimoValor = {
+  usd: null,
+  eur: null,
+  gold: null,
+  btc: null
+};
+
+const cotacaoBar = document.getElementById('cotacaoBar');
+const cotacaoClone = document.getElementById('cotacaoClone');
+const cotacaoWrapper = document.getElementById('cotacaoWrapper');
+
+// Criar cópia visual sem IDs para o clone
+function criarCopiaVisual() {
+  cotacaoClone.innerHTML = '';
+  const moedasOriginais = cotacaoBar.querySelectorAll('.moeda');
+  moedasOriginais.forEach(moeda => {
+    const clone = moeda.cloneNode(true);
+    const valorDiv = clone.querySelector('.valor');
+    if(valorDiv) valorDiv.removeAttribute('id');
+    cotacaoClone.appendChild(clone);
+  });
+}
+
+function formatarValor(valor, decimals = 2) {
+  return valor.toFixed(decimals).replace('.', ',');
+}
+
+function calcularClasseESeta(id, novoValor) {
+  let classe = '';
+  let seta = '';
+  if (ultimoValor[id] !== null) {
+    if (novoValor > ultimoValor[id]) {
+      classe = 'subiu';
+      seta = '▲';
+    } else if (novoValor < ultimoValor[id]) {
+      classe = 'desceu';
+      seta = '▼';
+    }
+  }
+  const texto = novoValor === null ? 'Erro' : `R$ ${formatarValor(novoValor, id === 'btc' ? 0 : 2)}${seta ? ' ' + seta : ''}`;
+  ultimoValor[id] = novoValor;
+  return {classe, texto};
+}
+
+function atualizarElemento(id, novoValor, textoClasse) {
+  const elem = document.getElementById(id);
+  if (!elem) return;
+
+  if (novoValor === null) {
+    elem.textContent = 'Erro';
+    elem.className = 'valor';
+  } else {
+    elem.textContent = textoClasse.texto;
+    elem.className = `valor ${textoClasse.classe}`;
+  }
+
+  // Atualizar clone correspondente
+  const index = ['usd','eur','gold','btc'].indexOf(id);
+  if(index >= 0) {
+    const cloneValor = cotacaoClone.children[index].querySelector('.valor');
+    if(cloneValor) {
+      cloneValor.textContent = textoClasse.texto;
+      cloneValor.className = `valor ${textoClasse.classe}`;
+    }
+  }
+}
 
 async function atualizarCotacoes() {
-      try {
-        const response = await fetch('https://economia.awesomeapi.com.br/last/USD-BRL,EUR-BRL');
-        const data = await response.json();
+  try {
+    const moedas = await fetch('https://economia.awesomeapi.com.br/last/USD-BRL,EUR-BRL,XAU-USD,BTC-BRL')
+      .then(res => res.json());
 
-        const usd = parseFloat(data.USDBRL.bid).toFixed(2).replace('.', ',');
-        const eur = parseFloat(data.EURBRL.bid).toFixed(2).replace('.', ',');
-
-        document.getElementById('usd').textContent = `R$ ${usd}`;
-        document.getElementById('eur').textContent = `R$ ${eur}`;
-      } catch (error) {
-        document.getElementById('usd').textContent = 'Erro';
-        document.getElementById('eur').textContent = 'Erro';
-        console.error('Erro ao buscar cotações:', error);
+    function pegarValor(codigo) {
+      if(moedas[codigo] && moedas[codigo].bid) {
+        return parseFloat(moedas[codigo].bid);
       }
+      return null;
     }
 
-    atualizarCotacoes();
-    setInterval(atualizarCotacoes, 60000); // Atualiza a cada 60 segundos
+    const usd = pegarValor('USDBRL');
+    const eur = pegarValor('EURBRL');
+    const ouroUSD = pegarValor('XAUUSD');
+    const usdBRL = pegarValor('USDBRL');
+    const btcRaw = pegarValor('BTCBRL');
+
+    let ouroBRL = null;
+    if(ouroUSD !== null && usdBRL !== null) {
+      ouroBRL = ouroUSD * usdBRL;
+    }
+
+    let btc = btcRaw !== null ? btcRaw : null;
+
+    atualizarElemento('usd', usd, calcularClasseESeta('usd', usd));
+    atualizarElemento('eur', eur, calcularClasseESeta('eur', eur));
+    atualizarElemento('gold', ouroBRL, calcularClasseESeta('gold', ouroBRL));
+    atualizarElemento('btc', btc, calcularClasseESeta('btc', btc));
+
+  } catch (e) {
+    console.error('Erro geral:', e);
+    ['usd','eur','gold','btc'].forEach(id => {
+      atualizarElemento(id, null, {classe:'', texto:'Erro'});
+      ultimoValor[id] = null;
+    });
+  }
+}
+
+criarCopiaVisual();
+atualizarCotacoes();
+setInterval(atualizarCotacoes, 60000);
+
+let scrollPos = 0;
+
+function animarCarrosselContinuo() {
+  if(window.innerWidth >= 768) {
+    cotacaoWrapper.scrollLeft = 0;
+    requestAnimationFrame(animarCarrosselContinuo);
+    return;
+  }
+
+  const scrollMax = cotacaoBar.scrollWidth;
+
+  scrollPos++;
+  if(scrollPos >= scrollMax) scrollPos = 0;
+
+  cotacaoWrapper.scrollLeft = scrollPos;
+
+  requestAnimationFrame(animarCarrosselContinuo);
+}
+
+animarCarrosselContinuo();
+
+window.addEventListener('resize', () => {
+  scrollPos = cotacaoWrapper.scrollLeft;
+  criarCopiaVisual();
+});
+
   </script>
 </body>
 </html>
