--- a/index.html
+++ b/index.html
@@ -981,11 +981,14 @@ form button:hover {
     }
 
     #sustentabilidade h2 {
-      font-size: 1.5rem;
-      margin: 0;
-      flex-shrink: 0;
-      white-space: nowrap;
-    }
+  font-size: 1.8rem; /* menor no mobile */
+  margin: 0 0 20px;
+  font-weight: 700;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.25);
+  word-wrap: break-word;
+  max-width: 100%;
+}
+
 
     #sustentabilidade p {
       font-size: 1rem;
