--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Black Diamond Bus</title>
+  <title>BlackDiamond Bus</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
     * {
@@ -937,11 +937,14 @@ form button:hover {
   }
 
   #sustentabilidade h2 {
-    font-size: 2.8rem;
-    margin: 0 0 20px;
-    font-weight: 700;
-    text-shadow: 1px 1px 4px rgba(0,0,0,0.25);
-  }
+  font-size: 1.8rem; /* menor no mobile */
+  margin: 0 0 20px;
+  font-weight: 700;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.25);
+  word-wrap: break-word;
+  max-width: 100%;
+}
+
 
   #sustentabilidade p {
     font-size: 1.2rem;
@@ -981,14 +984,11 @@ form button:hover {
     }
 
     #sustentabilidade h2 {
-  font-size: 1.8rem; /* menor no mobile */
-  margin: 0 0 20px;
-  font-weight: 700;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.25);
-  word-wrap: break-word;
-  max-width: 100%;
-}
-
+      font-size: 1.5rem;
+      margin: 0;
+      flex-shrink: 0;
+      white-space: nowrap;
+    }
 
     #sustentabilidade p {
       font-size: 1rem;
