--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BlackDiamond Bus</title>
+  <link rel="icon" href="imagens/logos/logs.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
     * {
@@ -869,7 +870,7 @@ form button:hover {
     overflow-x: hidden;
     display: flex;
     gap: 30px;
-    width: 100vw;
+    width: 100%;
   }
   .cotacao-bar, .cotacao-clone {
     display: flex;
@@ -1003,6 +1004,7 @@ form button:hover {
 </head>
 <body>
   <header>
+
     <div class="logo">
       <img src="imagens/logos/logs.svg" alt="Logo BlackDiamond Bus" />
     </div>
