--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@ form button:hover {
     </video>
     <div class="hero-content">
       <h1>Black Diamond Bus</h1>
-      <p>Excelência em aluguel de ônibus para prefeituras</p>
+      <p>Excelência em venda de ônibus para prefeituras</p>
     </div>
   </section>
 
@@ -1251,7 +1251,7 @@ form button:hover {
   <div class="footer-container">
     <div class="footer-column">
       <h3>Black Diamond Bus</h3>
-      <p>Exelência em alugueis de ônibus para prefeituras.</p>
+      <p>Exelência em venda de ônibus para prefeituras.</p>
     </div>
     <div class="footer-column">
       <h4>Links Rápidos</h4>
